turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:58: error: missing arguments for method init in class Turmite;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse(colors((rule(init)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                ^Turmite:59: error: missing arguments for method init in class Turmite;
follow this method with `_' if you want to treat it as a partially applied function
  rule(init)(x)(1)
       ^Turmite:66: error: not enough arguments for method init: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
		init();
                    ^